Fixed text overflow issue in super admin cards

--- a/src/css/SuperAdminPage.css
+++ b/src/css/SuperAdminPage.css
@@ -100,6 +100,7 @@
 }
 .super-admin-complaint-content {
   padding: 10px 20px;
+  overflow: hidden;
 }
 .title-super-admin-complaint{
   text-align: center;
@@ -118,11 +119,12 @@
   -webkit-box-orient: vertical;
   overflow: hidden;
 }
-.super-admin-details p{
+.super-admin-details{
   margin: 5px 0;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  max-width: 100%;
 }
 .status.Pending {
   color: orange;
